test/parse/expr/bad-br-no-depth.txt
;;; ERROR: 1
(module
  (func
    block
      br
    end))
(;; STDERR ;;;
out/test/parse/expr/bad-br-no-depth.txt:6:5: error: unexpected token "end", expected a numeric index or a name (e.g. 12 or $foo).
    end))
    ^^^
;;; STDERR ;;)
